--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     "license": "Apache-2.0",
     "require": {
         "php": ">=7.1",
-        "ext-swoole": ">=4.4",
-        "nikic/fast-route": "^1.3"
+        "ext-swoole": ">=4.4"
     },
     "authors": [
         {
@@ -26,9 +25,6 @@
             "PTFramework\\": "src/"
         }
     },
-    "bin": [
-        "bin/server.php"
-    ],
     "config": {
         "optimize-autoloader": true
     }
